2008-08-08 Tomas Frydrych  <tf@o-hand.com>
	* configure.ac:
	* src/Makefile.am:
	* src/home/Makefile.am:
	* src/launcher/Makefile.am
	* src/tidy/Makefile.am
	* tests/Makefile.am:
	Moved tidy from src/launcher to src/

	* src/home/hd-notication.h:
	* src/home/hd-notification.c:
	Start of customized notification actor.

2008-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Check for ftw.h and its GNU extensions.

	* src/launcher/Makefile.am:
	* src/launcher/hd-launcher-tree.c: 
	* src/launcher/hd-launcher-tree.h: Add a LauncherTree object, which
	will populate itself with the contents of the desktop entries
	following (a subset of) the XDG menu spec.

	* src/launcher/hd-app-launcher.c: Implement the rest of the
	LauncherItem base class methods.

	* src/launcher/hd-launcher-utils.c:
	* src/launcher/hd-launcher-utils.h: Start the launchers tree
	population when needed.

	* tests/test-launcher.c: Enable threading.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-edit-menu.c:
	Gettextized.

2008-08-07  Chris Lord  <chris@openedhand.com>

	* src/home/hd-home-view.c (hd_home_view_allocate),
	(hd_home_view_class_init), (get_bg_image_processed_name),
	(bg_image_set_idle_cb), (process_bg_image_thread),
	(hd_home_view_refresh_bg):
	Refresh the background image when the HomeView changes size

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-background-dialog.c:
	Gettextized.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	src/mb/hd-wm.c:
	Removed stale comment.

	src/home/hd-layout-dialog.c:
	(hd_layout_dialog_constructed):
	Gettextized labels.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Added -Wno-format-extra-args (necessary for us to work with the
	hildon logical strings).

	src/mb/hd-wm.c:
	(hd_wm_client_hang):
	Gettextized hand dialog; changed to conform to spec.

2008-08-07 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-dialog.c:
	Implement dialog sizing and positioning logic.

2008-08-05 Robert Bragg  <bob@o-hand.com>